publish ip route

--- a/content/articles/networking/18. jaringan-dasar.md
+++ b/content/articles/networking/18. jaringan-dasar.md
@@ -180,3 +180,10 @@ Saya harap tulisan ini bisa memberikan pengetahuan dasar bagaimana jaringan komp
 Dan terakhir kalau artikel ini dirasa berguna, silahkan di-share ke mereka yang sedang belajar dasar jaringan.  
 
 Terima kasih dan selamat belajar jaringan.
+
+
+&nbsp;
+
+**Artikel Berkaitan:**  
+[Materi lanjutan. Jaringan Layer 3, IP routing ](//devnull.web.id/networking/jaringan-layer-3.html)  
+_Apa yang terjadi di layer 3? IP routing, routing protocol, dan sedikit dynamic routing protocol_
